--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="data">11/Dez/2024</div>
             <h2>Aula 1 - Tameana Healing</h2>
             <div class="info">
-                <strong>Horário:</strong> 11 dez. 2024, 18:30h (Brasília)
+                <strong>Horário:</strong> 11 dez. 2024, 18:30h às 21:30h (Brasília)
             </div>
             <div class="info">
                 <strong>Link:</strong> <a href="https://us06web.zoom.us/j/89556352234" target="_blank">Entrar na Zoom Reunião</a>
@@ -126,7 +126,7 @@
             <div class="data">12/Dez/2024</div>
             <h2>Aula 2 - Tameana Healing</h2>
             <div class="info">
-                <strong>Horário:</strong> 12 dez. 2024, 18:30h (Brasília)
+                <strong>Horário:</strong> 12 dez. 2024, 18:30h às 21:30h (Brasília)
             </div>
             <div class="info">
                 <strong>Link:</strong> <a href="https://us06web.zoom.us/j/81095583961" target="_blank">Entrar na Zoom Reunião</a>
@@ -141,7 +141,7 @@
             <div class="data">16/Dez/2024</div>
             <h2>Aula 3 - Tameana Healing</h2>
             <div class="info">
-                <strong>Horário:</strong> 16 dez. 2024, 18:30h (Brasília)
+                <strong>Horário:</strong> 16 dez. 2024, 18:30h às 21:30h (Brasília)
             </div>
             <div class="info">
                 <strong>Link:</strong> <a href="https://us06web.zoom.us/j/89905915720" target="_blank">Entrar na Zoom Reunião</a>
@@ -156,7 +156,7 @@
             <div class="data">17/Dez/2024</div>
             <h2>Aula 4 - Tameana Healing</h2>
             <div class="info">
-                <strong>Horário:</strong> 17 dez. 2024, 18:30h (Brasília)
+                <strong>Horário:</strong> 17 dez. 2024, 18:30h às 21:30h (Brasília)
             </div>
             <div class="info">
                 <strong>Link:</strong> <a href="https://us06web.zoom.us/j/86217820483" target="_blank">Entrar na Zoom Reunião</a>
